Changes in SVN:

New Features:

- Added number of cities to scoreboard (Q)
- Included DanF5771's version of the Wonder tab on the info screen
- Constructed Wonders / Nat Wonders / Projects now shown for all Civs (if civ is known)
- Wonders / Nat Wonders / Projects under construction now shown for all Civs (if enough EPs against Civ)

Improvements:

- Graphs (both BUG and Vanilla) now include a 'log scale' option
- Logger now reports the amount of gold from pillages

Bug Fixes:

- Fixed City Built event
- Changed Scoreboard items (WHEOOH, Number of Cities) so that they are optional


FOR MODDERS

New Features:

-

Improvements:

- BugUtil
	getText() and getPlainText() both replace [ICON_XXX] in the message
	debugInput() prints to the screen using alert() instead of debug()

Bug Fixes:

-



Changes in BUG 3.6:

New Features:

- Added map script "Maze" by Sirian
- Field of View slider on the main screen
- Improvements to stats tab on info screen
- Tick Marks for selected progress bars (tech, food, production)
- Tick Marks: Added whip threshold indicator to city production bar (look for yellow center tick mark)
- Added FoodAssist: net food added to stores per turn and turns until starvation
- Added EventSigns: plots whose yields change due to random events marked on the map with signs
- Added BUG Finance Advisor with detailed line items for Commerce and Income
- Added Min/Max Commerce Rate buttons: set any commerce rate to 0% or 100% with one click
- Added Gold Rate Warning: yellow gold rate when negative but not enough to go below zero
- Added Strategy Overlay: create a multicolored in-game dot map
- Log the current turn slider values (gold, science, culture, espionage)

Improvements:

- Customizable Domestic Advisor (CDA) now also resizable based on 2 new BUG options
- CDA: Added a "whip anger" column to CDA (not added to any pages)
- CDA: coloring options now allow reversed comparisons (i.e. higher numbers are worse)